[package]
name = "wonderos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "example"
path = "src/example/bin/ex1.rs"

[[bin]]
name = "example_2"
path = "src/example/bin/ex2.rs"

[[bin]]
name = "example_3"
path = "src/example/bin/ex3.rs"

[[bin]]
name = "example_4"
path = "src/example/bin/ex4.rs"


[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = [] }
embedded-hal = "0.2.7"
defmt = "0.3"
defmt-rtt = "0.4"
stm32f3xx-hal = { version = "0.9.2", features = ["stm32f303xc", "ld"] }
lilos = "0.3.6"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
nb = "1.1.0"


# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-
